# minigpt-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py
assets/: styles.css
demo/: app.js  index.html  styles.css
models/: .gitkeep  config.json  metrics.json  model.safetensors  tokenizer.json
notebooks/: train_minigpt.ipynb  train_minigpt_kaggle.ipynb
scripts/: install_colab_weights.sh  verify_colab_weights.py
src/: __init__.py  artifacts.py  config.py  data.py  generate.py  inference.py  model.py  tokenizer.py  train.py
tests/: conftest.py  test_api.py  test_model.py  test_sampling.py  test_tokenizer.py  test_train.py
