[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt-llm"
version = "0.1.0"
description = "A from-scratch GPT-style language model in PyTorch, served via a streaming FastAPI API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Abstract runtime dependencies. Exact pinned versions for deployment live in
# requirements.txt (installed by the Dockerfile / serving platform).
dependencies = [
    "torch",
    "numpy",
    "safetensors",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "httpx",
    "pre-commit",
]
# Training-only extras (not needed to serve the model).
train = [
    "datasets",
    "tqdm",
]

[tool.setuptools]
packages = ["src", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src", "api"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true

# datasets ships no type stubs; it is a lazy, training-only import.
[[tool.mypy.overrides]]
module = ["datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Library-internal notice from Starlette's TestClient; not our code.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated:Warning",
]
